picture support and simple style

--- a/src/main/resources/site/pages/main/main.html
+++ b/src/main/resources/site/pages/main/main.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1>Site header</h1>
+        <h1>Header</h1>
     </header>
     <div data-portal-region="main">
         <h2>Example page header</h2>
@@ -16,7 +16,7 @@
         </div>
     </div>
     <footer>
-        Created by Persijn <a></a>pkw@enonic.com
+        <h2>Footer</h2>
     </footer>
 </body>
 
