--- a/src/main/resources/site/parts/blog_entry/blog_entry.html
+++ b/src/main/resources/site/parts/blog_entry/blog_entry.html
@@ -1,8 +1,8 @@
 <div class="blog-container">
-    <div data-th-each="blog_post : ${ blog_entries }">
-        <!--img data-th-href="${ blog_post.blogurl }" data-th-alt="${ img description }" alt="should be removed" /-->
-        <div>
-            <p data-th-utext="${ blog_post.data.blog_text }" data-th-remove-tag="tag">Should be removed</p>
+    <div data-th-remove="tag" data-th-each="blog_post : ${ blog_entries }">
+        <div style="border: 2px solid black; border-radius: 3px; margin: 20px; width: 500px;">
+            <img data-th-src="${ blog_post.data.blog_img_url }" /><!-- todo data-th-alt="${ img description }" alt="should be removed" /-->
+            <p data-th-utext="${ blog_post.data.blog_text }" data-th-remove="tag">Should be removed</p>
         </div>
     </div>
 </div>
