--- a/src/main/resources/site/parts/blog-overview/blog-overview.html
+++ b/src/main/resources/site/parts/blog-overview/blog-overview.html
@@ -9,7 +9,7 @@
                     data-th-alt="${post.data['alt-text']}" />
                 <h3 class="blog-title" tabindex="0"
                     data-th-text="${post.displayName}"></h3>
-                <time class="blog-subtitle" data-th-text="${ post.data.date }">MM:HH DD/MM/YYYY</time>
+                <time class="blog-subtitle" data-th-text="${ post.data.date }">DD/MM/YYYY</time>
             </div>
             <div class="blog-content"
                 data-th-utext="${post.data.content}"></div>
