--- a/src/main/resources/site/parts/blog-overview/blog-overview.html
+++ b/src/main/resources/site/parts/blog-overview/blog-overview.html
@@ -1,18 +1,17 @@
 <section class="blog-overview">
     <h2 data-th-text="${title}" tab-index="0"></h2>
     <div data-th-each="post : ${blogposts}" data-th-remove="tag">
-        <div class="blog-post" tabindex="0">
+        <article class="blog-post" tabindex="0">
             <div class="blog-header">
-                <img tabindex="0"
+                <img tabindex="0" 
                     data-th-if="${post.data.image_url}" 
                     data-th-src="${post.data.image_url}" 
                     data-th-alt="${post.data['alt-text']}" />
-                <h3 class="blog-title" tabindex="0"
-                    data-th-text="${post.displayName}"></h3>
+                <h3 class="blog-title" tabindex="0" data-th-text="${post.displayName}"></h3>
                 <time class="blog-subtitle" data-th-text="${ post.data.date }">DD/MM/YYYY</time>
             </div>
-            <div class="blog-content"
-                data-th-utext="${post.data.content}"></div>
-        </div>
+            <div class="blog-content" data-th-utext="${ post.data.overviewText }"></div>
+            <a data-th-href="${ post.blogUrl }">read more</a>
+        </article>
     </div>
 </section>
