--- a/src/main/resources/site/parts/blog-show/blog-show.html
+++ b/src/main/resources/site/parts/blog-show/blog-show.html
@@ -1,12 +1,13 @@
 <article class="blog-post">
     <header class="blog-header">
-        <img data-th-if="${post.data.image_url}" 
+        <img tabindex="0" 
+            data-th-if="${post.data.image_url}" 
             data-th-src="${post.data.image_url}" 
             data-th-alt="${post.data['alt-text']}" />
         <h2 class="blog-title" tabindex="0"
             data-th-text="${post.displayName}"></h2>
-        <time class="blog-subtitle" data-th-text="${ post.data.date }">MM:HH DD/MM/YYYY</time>
+        <time class="blog-subtitle" tabindex="0" data-th-text="${ post.data.date }">MM:HH DD/MM/YYYY</time>
     </header>
-    <div class="blog-content"
+    <div class="blog-content" tabindex="0"
         data-th-utext="${post.data.content}"></div>
 </article>
