--- a/src/main/resources/site/parts/blog-overview/blog-overview.html
+++ b/src/main/resources/site/parts/blog-overview/blog-overview.html
@@ -1,9 +1,13 @@
 <section class="blog-overview">
-    <h2 data-th-text="${title}" tab-index="0"></h2>
+    <h2 tab-index="0" 
+    data-th-if="${ showheader }" 
+    data-th-text="${title}"></h2>
     <article class="blog-post" data-th-each="post : ${blogposts}" tabindex="0">
         <div class="blog-header">
             <img tabindex="0" data-th-if="${post.data.image_url}" data-th-src="${post.data.image_url}" data-th-alt="${post.data['alt-text']}" />
-            <h3 class="blog-title" tabindex="0" data-th-text="${post.displayName}"></h3>
+            <h3 class="blog-title" tabindex="0" 
+            
+            data-th-text="${post.displayName}"></h3>
             <time class="blog-subtitle" tabindex="0" data-th-text="${ post.data.date }">DD/MM/YYYY</time>
         </div>
         <div class="blog-content" tabindex="0" data-th-utext="${ post.data.overviewText }"></div>
